oblig2patch/src/tests/oblig2/errors/general4_fail.cmp
program general4_fail /* error, no procedure main() */
begin
  proc Proc()
  begin
    in
    printstr( "Hello world!" )
  end
end